crates/solidity-v2/testing/snapshots/diagnostics_output/structure/unimplemented_modifier_must_be_virtual/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

[Warning 8429] Warning: Virtual modifiers are deprecated and scheduled for removal.
   ╭─[input.sol:9:5]
   │
 9 │     modifier m2 virtual;
   │     ──────────┬─────────  
   │               ╰─────────── Error occurred here.
───╯

[TypeError 3656] Error: Contract "C" should be marked as abstract.
    ╭─[input.sol:4:1]
    │
  4 │ ╭─▶ contract C {
    ┆ ┆   
 15 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯

[TypeError 8063] Error: Modifiers without implementation must be marked virtual.
   ╭─[input.sol:6:5]
   │
 6 │     modifier m1;
   │     ──────┬─────  
   │           ╰─────── Error occurred here.
───╯
